Features Added: 1- Add Task 2- Swipe to delete 3- Mark task if done 4- Get todos by date 5- Created UI for Edit/Settings

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,13 @@
         android:theme="@style/Theme.ToDoApp"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
-            android:theme="@style/Theme.ToDoApp">
-        </activity>
+            android:name=".ui.theme.EditActivity"
+            android:theme="@style/noActionBar" />
         <activity
-            android:name=".Splash"
+            android:name=".ui.theme.MainActivity"
+            android:theme="@style/noActionBar"/>
+        <activity
+            android:name=".ui.theme.Splash"
             android:exported="true"
             android:theme="@style/noActionBar">
             <intent-filter>
